--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
            </div>
         </div>
         <div>
-            <img src="/img/Firstmen.png" alt="firstmen">
+            <img src="../img/Firstmen.png" alt="firstmen">
         </div>
     </section>
     <footer class="footer">
